Bug 122570 - Doesn't work Enter key in Autofilter window in Calc
Summary: Doesn't work Enter key in Autofilter window in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.8.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisected, bisected, needUITest, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-01-08 18:31 UTC by Roman Kuznetsov
Modified: 2019-11-13 18:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODS file (8.11 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-01-08 18:32 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-01-08 18:31:01 UTC
Description:
Doesn't work Enter key in Autofilter window in Calc

Version: 6.3.0.0.alpha0+
Build ID: 7809ec859d5bdb5dedb259a362a15324088b334c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

in LO 6.2.0.1 Enter key works as should -> regression

Steps to Reproduce:
1. Open file from attach
2. Try use Autofilter for column A -> enter in field for example iv
3. Push Enter key
4. Nothing happens

ps: if you try use Autofilter in column B, then Enter key works, but result of operation is wrong (for numbers only?)

Actual Results:
Enter key doesn't work for text data and Enter key works wrong for number data

Expected Results:
Enter key works for text data and Enter key works right for number data


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2019-01-08 18:32:12 UTC
Created attachment 148139 [details]
Example ODS file
Comment 2 Roman Kuznetsov 2019-01-08 18:47:05 UTC
I bisected it

$ git bisect bad df6c1e9dcfaa3355c31ab92b54f25f6c5bf86df9 is the first bad commit
commit df6c1e9dcfaa3355c31ab92b54f25f6c5bf86df9
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Jan 5 20:49:57 2019 -0800

    source 144ee02fc714f2f022e5046aeec2b46cd4cd1476


https://gerrit.libreoffice.org/#/c/64417/

CC: Jim Raykowski
Comment 3 Xavier Van Wijmeersch 2019-01-08 18:52:29 UTC
confirm with

Version: 6.3.0.0.alpha0+
Build ID: 2e189c2464de007b3d59ba37d4f3f1cfbe5b480c
CPU threads: 2; OS: Linux 4.19; UI render: default; VCL: gtk2; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded

even in column B its not working
Comment 4 Jim Raykowski 2019-01-09 02:19:53 UTC
Hi All,

So I now know "what is" and "how to use" AutoFilter and noticed after reverting the patch that caused the regression reported here that it needs some keyboard navigation attention. With patch applied arrow keys can be used to navigate combobox items but not so when patch is reverted. I will open a new bug report for this if there isn't one already.

The patch that has been reverted was made to fix bug 120170.
Comment 5 Roman Kuznetsov 2019-01-20 18:50:36 UTC
(In reply to Jim Raykowski from comment #4)
> Hi All,
> 
> So I now know "what is" and "how to use" AutoFilter and noticed after
> reverting the patch that caused the regression reported here that it needs
> some keyboard navigation attention. With patch applied arrow keys can be
> used to navigate combobox items but not so when patch is reverted. I will
> open a new bug report for this if there isn't one already.
> 
> The patch that has been reverted was made to fix bug 120170.

Jim, new patch for bug 120170 aready merged?

I ask because in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: eca59b6b8a0cf826ac59f77aec9acf045340c23f
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-16_03:48:12
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

Enter key already works in Autofilter window. Can I (or you) close as RESOLVED this bug and 120170?
Comment 6 Jim Raykowski 2019-01-20 22:37:48 UTC
(In reply to Roman Kuznetsov from comment #5) 
> Jim, new patch for bug 120170 aready merged?
>

Hi Roman, Yes the patch has been merged.
Comment 7 Xisco Faulí 2019-01-21 14:23:49 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 3fa4674615b747e219afe5bf0a9b689df3840439
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US

Jim Raykowski, thanks for fixing this!!
Comment 8 Norbert 2019-09-29 18:19:05 UTC
hello, I have
Version: 6.3.1.2 (x64)
Build-ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU-Threads: 8; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

If I search a element in the pulldown menu and press Enter - nothing happens. In the versions befor I think it works. 

Doesn´t it?

see also 

https://ask.libreoffice.org/de/question/210320/autofilter-entertaste-geht-nicht-mehr/

I am not alone
Comment 9 Jim Raykowski 2019-09-29 20:08:31 UTC
I fixed this and then broke it with the patch for bug 122774. Here is a patch that works for both and AFAIK doesn't break something else.

https://gerrit.libreoffice.org/#/c/79815/
Comment 10 Commit Notification 2019-10-02 01:56:20 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d09dc224977c498356ab76738afe03136c98fabe

tdf#122570 Make Enter key work in autofilter search items input

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2019-10-16 10:50:27 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: e2d82611088677f8ec9f038639567f2d7c699b5e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Jim Raykowski, thanks for fixing this issue!
Comment 12 Commit Notification 2019-10-17 06:32:49 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/ca5701e9d4bb62c45920b6617de59bd9c6b529c7

tdf#122570 Make Enter key work in autofilter search items input

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.