tdf#122570 Make Enter key work in autofilter search items input

Fixes regression introduced by patch for tdf#122774

Change-Id: I24fc8a32cbb660027fb40fb017d03567e784aa77